# 2025-src

./: .dir-locals.el  Makefile  README.org  jaif-website.cabal  stack.yaml
pages/: cfp.org  index.org  infos-pratiques.org  inscription.org  programme.org  visio.org
src/: website-generator.hs
templates/: default.html
