name:               jaif-website
version:            0.1
build-type:         Simple
cabal-version:      >= 1.10

executable website-generator
  main-is:          website-generator.hs
  hs-source-dirs:   src
  build-depends:    base == 4.*
                  , directory
                  , filepath
                  , hakyll
                  , process
                  , text
  ghc-options:      -Wall -threaded
  default-language: Haskell2010
